Adding customers, purchases, counting points.